# spack-benchmark

./: .gitignore  README.md  pyproject.toml  script.py  table.py
benchmark/: __init__.py
benchmark/cmd/: solve_benchmark.py
benchmark/cmd/data/: propagation.txt  radiuss.txt
script/: script.py  table.py
