[project]
name = "benchmark"
description = "Extension commands to benchmark Spack"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
  "tqdm",
  "pandas",
  "matplotlib",
  "spack"
]

[project.entry-points."spack.extensions"]
benchmark = "benchmark:get_spack_extension_paths"

[project.entry-points."spack.config"]
benchmark = "benchmark:get_spack_config_dir"

[tool.setuptools.package-dir]
"spack.extensions.benchmark" = "benchmark"
#packages = ["benchmark", "benchmark.cmd"]
